Improving Unit test coverage